<resources>
  <string name="app_name">Puzzle Mazing</string>

  <string name="image_description_loading">Loading</string>

  <!-- app init -->
  <string name="app_init_checking_update">Checking for updates&#8230;</string>
  <string name="app_init_loading_token">Loading saved token&#8230;</string>
  <string name="app_init_complete_login">Please complete the login form.</string>
  <string name="app_init_waiting_response">Waiting for response&#8230;</string>
  <string name="app_init_saving_token">Saving your session&#8230;</string>

  <string name="app_init_error_checking_update">
    Update check failed. Your device may be offline or our server
    may be out of service.
  </string>
  <string name="app_init_error_oudated">
    This application is outdated. Please update to the newest version!
  </string>
  <string name="app_init_error_logging_in">
    We could not complete your log in / register request because of a network error.
    Your device may be offline or our server may be out of service.
  </string>
  <string name="app_init_login_error">
    We could not log you in at this time.
    Please double check your username and password.
  </string>
  <string name="app_init_register_error">
    We could not register you at this time. %s
  </string>

  <!-- app log in/register -->
  <string name="app_welcome_login">Login</string>
  <string name="app_welcome_register">Register</string>
  <string name="app_welcome_password">Password</string>
  <string name="app_welcome_username">Username</string>
  <string name="app_welcome_greeting">Welcome back, %s!</string>
  <string name="app_welcome_continue">Continue as %s</string>
  <string name="app_welcome_switch_account">Switch Account</string>
  <string name="app_welcome_key_user_token">user-token</string>

  <!-- log in/register error messages -->
  <string name="app_welcome_error_credential_required">
    Both username and password are required in order to log in or register.
  </string>
  <string name="app_welcome_error_username_length">
    Username must be at least %d characters long.
  </string>
  <string name="app_welcome_error_password_length">
    Password length must be greater than or equal to %d.
  </string>

  <!-- dialog buttons -->
  <string name="dialog_try_again">Try Again</string>
  <string name="dialog_exit">Exit</string>
  <string name="dialog_skip">Skip</string>

  <!-- game -->
  <string name="level_one">Level 1</string>
  <string name="level_two">Level 2</string>
  <string name="display_score">score: %d</string>

  <!-- busy worker_worker -->
  <string name="busy_worker_title">Busy Worker</string>
  <string name="busy_worker_win">CONGRATS</string>
  <string name="busy_worker_score">Your Current Score:</string>
  <string name="busy_worker_time">Time Left:</string>

  <!-- crazy match -->
  <string name="crazy_match_game_ball">Game Ball</string>
  <string name="crazy_match_title">Crazy Match</string>

  <!-- word guessing -->
  <string name="word_guessing_title">Word Guessing</string>
  <string name="submit">Submit</string>
  <string name="hint">Hint</string>
  <string name="incorrect_attempt">Not quiet&#8230; Try again.</string>

  <!-- score board -->
  <string-array name="scoreTypesForRank">
    <item>Rank By Challenge 1 Score</item>
    <item>Rank By Challenge 2 Score</item>
    <item>Rank By Challenge 3 Score</item>
    <item>Rank By Total  Score</item>
  </string-array>

  <string name="score_board_title">Score Board</string>
  <string name="score_board_user_name">User</string>
  <string name="score_board_exit">MAIN PAGE</string>

  <!-- main page -->
  <string name="menu_page_enter"> - ENTER - </string>
  <string name="menu_page_scoreboard"> - SCOREBOARD - </string>
  <string name="menu_page_setting"> - SETTINGS - </string>

  <!-- setting page -->
  <string name="background_music">Background Music</string>
  <string name="soundtrack_0">No Soundtrack</string>
  <string name="soundtrack_1">Soundtrack 1</string>
  <string name="soundtrack_2">Soundtrack 2</string>
  <string name="color_theme">Color Theme</string>
  <string name="color_theme_1">Color Theme 1</string>
  <string name="color_theme_2">Color Theme 2</string>
  <string name="select_avatar_prompt">Select Your Avatar:</string>

  <!-- game finished page -->
  <string name="settings">SETTINGS</string>
  <string name="next_level">Next Level</string>
  <string name="time">Time Used: %d</string>
  <string name="score">Score: %d</string>
  <string name="back_to_map">Back to Map</string>
  <string name="play_again">play again</string>
  <string name="highest_score">highest score</string>

  <!-- game map page -->
  <string name="next_game_prmopt">Let us go to the next challenge.</string>
  <string name="finish_all_challenges_prmopt">You saved the prince!</string>
</resources>
