<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/welcomeBackLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF">

    <Button
      android:id="@+id/btnContinue"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="330dp"
      android:layout_height="60dp"
      android:background="@drawable/game_button"
      android:fontFamily="sans-serif"
      android:text="@string/app_welcome_continue"
      android:textColor="#FFFFFF"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvGreeting"
      app:layout_constraintVertical_bias="0.0" />

    <TextView
      android:id="@+id/tvGreeting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/app_welcome_greeting"
      android:textSize="33sp"
      app:layout_constraintBottom_toTopOf="@+id/btnContinue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/btnSwitchAccount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/app_welcome_switch_account"
      android:textSize="12sp"
      android:background="@color/colorPrimary"
      android:textColor="@android:color/background_light"
      android:padding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>