<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/credentialLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF">

    <EditText
      android:id="@+id/txtUsername"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/app_welcome_username"
      android:inputType="none"
      android:importantForAutofill="no"
      android:singleLine="true"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_welcome_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        app:layout_constraintVertical_bias="0.1"
        android:importantForAutofill="no" />

    <Button
      android:id="@+id/btnRegister"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:background="@drawable/game_button"
      android:fontFamily="sans-serif"
      android:tag="register"
      android:text="@string/app_welcome_register"
      android:textColor="#FFFFFF"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtPassword"
      app:layout_constraintVertical_bias="0.398" />

    <Button
      android:id="@+id/btnLogin"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:background="@drawable/game_button"
      android:fontFamily="sans-serif"
      android:text="@string/app_welcome_login"
      android:textColor="#FFFFFF"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.792"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtPassword"
      app:layout_constraintVertical_bias="0.398" />

    <TextView
      android:id="@+id/tvErrorMessage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="16dp"
      android:textSize="15sp"
      android:textColor="@color/red"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtPassword"
      app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>