<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtScoreBoardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_board_title"
        android:textSize="30sp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinScoreType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableUserScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TableRow>

                    <TextView
                        android:id="@+id/txtScoreBoardUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/score_board_user_name"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/txtScoreBoardScoreType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="25sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtUser1Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtUser1Score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtUser2Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtUser2Score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtUser3Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtUser3Score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/score_board_exit"
        android:textSize="12sp" />

</LinearLayout>